--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/thupremebot.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint lib/ bin/"
+    "lint": "eslint lib/ bin/",
+    "dev": "node bin/thupremebot.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,9 @@
   },
   "homepage": "https://github.com/gehsekky/thupremebot#readme",
   "devDependencies": {
-    "config": "^1.24.0",
-    "eslint": "^4.19.1",
-    "jest": "^22.4.3"
+    "config": "^3.0.1",
+    "eslint": "^5.10.0",
+    "jest": "^23.6.0"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
